--- a/index.css
+++ b/index.css
@@ -14,15 +14,23 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #202127;
+  height: 100%;
+  padding:0;
+  display:flex;
+  flex-direction: column;
 }
 
-.headerrect {
+html {
+  height:100%;
+}
+
+.headerrect, .footerrect {
   background-color: var(--rectblue);
   overflow:auto;
   margin-left: 3vw;
   margin-right: 3vw;
   margin-top: 4vh;
-  margin-bottom:2vh;
+  margin-bottom:4vh;
   border-radius: 1vh;
   white-space: nowrap; 
   display:flex;
@@ -52,3 +60,37 @@ li {
 /* margin = outside box 
 padding = inside box
 */
+
+#foottext{
+  padding-left: 3vw;
+  padding-right: 3vw;
+}
+
+.slideshow{
+  background-color: var(--rectblue);
+  display: inline;
+  width:50%;
+  height:100;
+  border-radius: 1vh;
+}
+
+#sophiaphoto{
+  max-width: 5vw;
+  max-height: 5vw;
+  display:inline-block;
+  border-radius: 1vh;
+}
+
+.contact{
+  background-color: var(--rectblue);
+  display:inline-block;
+  border-radius: 1vh;
+}
+
+.section2{
+  display: flex;
+  flex:1;
+  margin-left: 3vw;
+  margin-right: 3vw;
+  border-radius: 1vh;
+}
